Merge pull request #11000 in CLOUD/docs from ycdocs-7457-dataproc-jvm-properties to develop
Squashed commit of the following:

commit f5b5497ad452277c3da7e3534b70e09b8e4e19bb
Author: redalka <redalka@yandex-team.ru>
Date:   Thu Dec 1 16:06:45 2022 +0300

    YCDOCS-7457: fix

commit a52db802ef7cc178684e700e119f2c6dfdc02f8a
Author: redalka <redalka@yandex-team.ru>
Date:   Thu Dec 1 15:38:39 2022 +0300

    YCDOCS-7457: test for formatting

commit 75e6224c2cb808dbc9d4954b42662b3a4b263f53
Author: redalka <redalka@yandex-team.ru>
Date:   Thu Dec 1 15:22:05 2022 +0300

    YCDOCS-7457: DataProc JVM settings

commit 2aeb41b25a01ee7edfc471ecf2d67390adc06b9e
Author: Petr Reznikov <prez@yandex-team.ru>
Date:   Thu Nov 24 17:42:27 2022 +0300

    [MICRO] YCDOCS-7457 : Add JVM-related properties default values description

commit 6f7654a781df6a4ea2d8d6d01d20a79519064534
Author: Mariia Sosnovskaia <myusosnovskay@yandex-team.ru>
Date:   Thu Nov 24 14:06:20 2022 +0000

    Merge pull request #10894 in CLOUD/docs from update/DOCSUP-37450-sc-added-api-tabs to develop

    Squashed commit of the following:

    commit 81e6da755ca6ee7d731a6c08429f1490e01a1dbb
    Author: igorpopov1407 <igorpopov1407@yandex-team.ru>
    Date:   Thu Nov 24 16:42:29 2022 +0300

        fixed typo

    commit 06dd59774e220ec2effa6521b36f3cb32f7af099
    Author: igorpopov1407 <igorpopov1407@yandex-team.ru>
    Date:   Thu Nov 24 16:03:42 2022 +0300

        Update update.md

    commit 7360e88ae31ef82ed86487d146413df0b0c53ade
    Author: igorpopov1407 <igorpopov1407@yandex-team.ru>
    Date:   Thu Nov 24 16:00:17 2022 +0300

        deleted whitespace

    commit 04941a0609ceb43cb068f1feaaea923129a9815c
    Author: igorpopov1407 <igorpopov1407@yandex-team.ru>
    Date:   Thu Nov 24 15:59:03 2022 +0300

        making edits

    commit d2f96458bf51c2d9e50a28cd996f52c203ac2b07
    Author: igorpopov1407 <igorpopov1407@yandex-team.ru>
    Date:   Mon Nov 21 12:24:40 2022 +0300

        added additional tabs

